<resources>

    <string name="app_name">ReadAnyText</string>
	<string name="open_file">Open</string>
	<string name="setting">setting</string>
	<string name="directory_root">内存目录</string>
	<string name="isdirectory">></string>
	<string name="newFile">新建文件</string>
	<string name="newDirectory">新建文件夹</string>
	<string name="sortFile">排序</string>
	<string name="hidenFile">显示隐藏文件</string>
	<string name="searchFile">搜索</string>
	<string name="refreshFile">刷新</string>
	<string name="changeFile">切换文件</string>
	<string name="recentFile">最近打开</string>
	<string name="sortFileByName">文件名称</string>
	<string name="sortFileByTime">修改时间</string>
	<string name="sortFileBySize">文件大小</string>
	<string name="OK">确定</string>
	<string name="CANCEL">取消</string>
	<string name="pleaseInput">请输入%s</string>
	<string name="filename">文件名称</string>
	<string name="filedirectoryname">文件名称</string>
	<string name="delete">删除</string>
	<string name="cut">剪切</string>
	<string name="paste">粘贴</string>
	<string name="copy">复制</string>
	<string name="rename">重命名</string>
	<string name="newName">新名称</string>
</resources>
